--- a/themes/papermod/layouts/index.html
+++ b/themes/papermod/layouts/index.html
@@ -68,9 +68,12 @@
 
   <div class="movies">
     <h2>📺 Recently viewed</h2>
-  <script language="JavaScript" src="http://feed2js.org//feed2js.php?src=https%3A%2F%2Fletterboxd.com%2Fkwon%2Frss%2F&num=3&desc=1&utf=y"  charset="UTF-8" type="text/javascript"></script>
 
-  <noscript><a href="http://feed2js.org//feed2js.php?src=https%3A%2F%2Fletterboxd.com%2Fkwon%2Frss%2F&num=3&desc=1&utf=y&html=y">More at Letterboxd</a></noscript>
+  <script language="JavaScript" src="https://feedroll.com/rssviewer/feed2js.php?src=https%3A%2F%2Fletterboxd.com%2Fkwon%2Frss%2F&num=5&desc=1&utf=y"  charset="UTF-8" type="text/javascript"></script>
+
+<noscript>
+<a href="https://feedroll.com/rssviewer/feed2js.php?src=https%3A%2F%2Fletterboxd.com%2Fkwon%2Frss%2F&num=5&desc=1&utf=y&html=y">View RSS feed</a>
+</noscript>
 
     <div class="more"><a href="https://letterboxd.com/kwon/">More at Letterboxd</a></div>
   </div>
