--- a/themes/papermod/layouts/index.html
+++ b/themes/papermod/layouts/index.html
@@ -27,9 +27,11 @@
 
 {{ range first 1 .Pages }}
     <article class="snippet">
-        <div class="post-meta">
-          <h1><a href="{{ .RelPermalink }}">{{ .Title }}</a></h1>{{ .Date.Format "Monday, Jan 2, 2006" }}
-        </div>
+      <header>
+          <h1><a href="{{ .RelPermalink }}">{{ .Title }}</a></h1>
+          <div class="post-meta">
+          {{ .Date.Format "Monday, Jan 2, 2006" }}</div>
+      </header>
         <div class="post-summary">{{ .Summary }}{{ if .Truncated }}...
           <p><a href="{{ .RelPermalink }}">Keep reading</a></p>
       {{ end }}</div>
