--- a/themes/papermod/assets/css/theme-vars.css
+++ b/themes/papermod/assets/css/theme-vars.css
@@ -44,11 +44,8 @@
     --highlight: #37383e;
 }
 
-.list {
-    background: var(--code-bg);
-}
-
-.dark.list {
+.list, .dark.list  {
     background: var(--theme);
 }
+
 
