--- a/themes/papermod/assets/css/reset.css
+++ b/themes/papermod/assets/css/reset.css
@@ -40,13 +40,24 @@ h3,
 h4,
 h5,
 h6 {
-    color: var(--primary)
+    color: var(--primary);
+}
+
+h1, 
+h2,
+h3 {
+    font-family: new-spirit,serif;
+    font-weight: 400;
+    font-style: normal;
 }
 
 body {
-    font-family: 'Overpass Mono', monospace;
-    font-size: 15px;
+    font-weight: 400;
+    font-style: normal;
+    font-family: -apple-system,BlinkMacSystemFont,neue-haas-unica,sans-serif;
+    font-size: 16px;
     line-height: 1.6;
+    letter-spacing: 0.02em;
     word-break: break-word;
     background: var(--theme)
 }
