revised instances of manhattan to brooklyn

--- a/themes/papermod/layouts/partials/footer.html
+++ b/themes/papermod/layouts/partials/footer.html
@@ -1,6 +1,6 @@
 <footer class="footer">
     <div class="top">
-        <span><a href="{{ "" | absLangURL }}">Kwon.nyc</a> is made by me in Manhattan</span>
+        <span><a href="{{ "" | absLangURL }}">Kwon.nyc</a> is made by me in Brooklyn</span>
         <span>&copy; {{ now.Year }} <a href="mailto:rachel.kwon at gmail.com">Rachel J. Kwon</a></span>
 <!--         <span><img src="assets/images/kwon-logo.png" title="Kwon logo" /></span> -->
     </div>
