--- a/themes/papermod/assets/css/main.css
+++ b/themes/papermod/assets/css/main.css
@@ -328,6 +328,10 @@ section.footnotes hr {
     margin-top: 8rem;
 }
 
+figure.full img {
+    width: 20%;
+}
+
 /* -----------------------------------
 PAGES: NOTES - LIST
 ----------------------------------- */
