--- a/themes/papermod/layouts/partials/footer.html
+++ b/themes/papermod/layouts/partials/footer.html
@@ -1,14 +1,14 @@
 <footer class="footer">
     <div class="top">
         <span><a href="{{ "" | absLangURL }}">Kwon.nyc</a> is made by me in Brooklyn</span>
-        <span>&copy; {{ now.Year }} <a href="mailto:rachel.kwon at gmail.com">Rachel J. Kwon</a></span>
+        <span>&copy; {{ now.Year }} <a href="mailto:kwon at fastmail.com">Rachel J. Kwon 권어진</a></span>
 <!--         <span><img src="assets/images/kwon-logo.png" title="Kwon logo" /></span> -->
     </div>
     <div class="bottom-left">
         <span><a href="{{ "" | absLangURL }}colophon">Colophon</a></span>
 <!--         <span><a href="{{ "" | absLangURL }}links">Links</a></span> -->
         <span><a href="{{ "" | absLangURL }}notes/index.xml">RSS feed</a></span>
-        <span><a href="mailto:rachel@kwon.nyc">Email</a></span>
+        <span><a href="mailto:kwon at fastmail.com">Email</a></span>
     </div>
     <div class="bottom-right">
         <span><a href="https://twitter.com/rjkwon">Twitter</a></span>
