updated location on about page

--- a/themes/papermod/layouts/about/about-layout.html
+++ b/themes/papermod/layouts/about/about-layout.html
@@ -14,14 +14,8 @@
 
   <sidebar>
   	40° 43' 50.1960" N<br />
-  	73° 56' 6.8712" W
-<!--     Topics I could discuss for 20+ minutes with no preparation:
-  	<ul>
-  		<li><a href="https://oxfordmedicine.com/view/10.1093/med/9780199384075.001.0001/med-9780199384075">50 Studies Every Surgeon Should Know</a>, Oxford University Press, 2017</li>
-  		<li><a href="https://www.theguardian.com/profile/rachel-kwon">The Guardian</a></li>
-  		<li><a href="https://www.imdb.com/name/nm9087310/">IMDb</a></li>
-  		<li></li>
-  	</ul> -->
+  	73° 56' 6.8712" W<br />
+    Brooklyn, New York
   </sidebar>
   
   <figure>
