--- a/themes/papermod/layouts/about/about-layout.html
+++ b/themes/papermod/layouts/about/about-layout.html
@@ -15,7 +15,7 @@
   <sidebar>
   	40° 43' 50.1960" N<br />
   	73° 56' 6.8712" W<br />
-    Brooklyn, New York
+    test Brooklyn, New York
   </sidebar>
   
   <figure>
