--- a/themes/papermod/layouts/colophon/colophon-layout.html
+++ b/themes/papermod/layouts/colophon/colophon-layout.html
@@ -9,6 +9,6 @@
 
 </section>
 
-<div class="sidebar">A note on privacy and data: I don't use cookies or collect any of your data on this site. I don't sell anything or make any money on this site. I do use a cookie-free analytics platform called Plausible to get basic metrics that I use to make the website better.</div>
+<div class="sidebar">A note on privacy and data: I don't use cookies or collect any of your data on this site. I don't sell anything or make any money on this site. I do use a cookie-free analytics platform called <a href="https://plausible.io/">Plausible</a> for basic metrics. The metrics I am most interested in are referring pages (to see who cares enough to link to this site and to maybe make new friends 😀), and visitor counts in aggregate (to get a sense of how many people are looking at specific things I've written, and, I'll be honest, to get a small but nontoxic ego boost). What I am NOT interested in is tracking what individual visitors are doing.</div>
 
 {{ end }}
