--- a/themes/papermod/assets/css/post-single.css
+++ b/themes/papermod/assets/css/post-single.css
@@ -233,12 +233,14 @@
     border-inline-start: 3px solid var(--primary)
 }
 
-.post-content hr {
-    margin: 30px 0;
-    height: 2px;
-    background: var(--tertiary);
-    border-top: 0;
-    border-bottom: 0
+.post-content hr { 
+    margin: 4rem 25%;
+    height: 0;
+    width: 50%;
+    border-top: 1px solid var(--tertiary);
+    border-bottom: 0;
+    border-left: 0;
+    border-right: 0;
 }
 
 .post-content iframe {
