update /now page, add mastodon link to footer

--- a/themes/papermod/layouts/partials/footer.html
+++ b/themes/papermod/layouts/partials/footer.html
@@ -11,9 +11,9 @@
         <span><a href="mailto:kwon at fastmail.com">Email me</a></span>
     </div>
     <div class="bottom-right">
+        <span><a rel="me" href="https://mastodon.social/@rjkwon">Mastodon</a></span>
         <span><a href="https://twitter.com/rjkwon">Twitter</a></span>
         <span><a href="https://www.linkedin.com/in/rjkwon/">LinkedIn</a></span>
-        <span><a href="https://www.instagram.com/kneeyoncebowls/">Instagram</a></span>
         <span><a href="https://www.last.fm/user/rjkwon">Last.fm</a></span>
         
     </div>   
