--- a/themes/papermod/assets/css/header.css
+++ b/themes/papermod/assets/css/header.css
@@ -27,17 +27,14 @@
 }
 
 #theme-toggle svg {
-    /*height: 18px;*/
+    height: 18px;
 }
 
-button#theme-toggle { /*  */
+button#theme-toggle { 
     font-size: 26px;
-    line-height: 40px;
-    margin: auto 4px
 }
 
 body.dark #moon {
-    /*vertical-align: bottom;*/
     display: none
 }
 
@@ -66,22 +63,9 @@ body:not(.dark) #sun {
     /*background-color: white;*/
 }
 
-.lang-switch li,
-.lang-switch ul,
 .logo-switches {
     display: inline-flex;
     margin: auto 4px;
-}
-
-.lang-switch {
-    display: flex;
-    flex-wrap: inherit
-}
-
-.lang-switch a {
-    margin: auto 3px;
-    font-size: 16px;
-    font-weight: 500;
 }
 
 .logo-switches {
