--- a/sites/projects.kwon.nyc/public/css/internet-is-fun.css
+++ b/sites/projects.kwon.nyc/public/css/internet-is-fun.css
@@ -1,13 +1,17 @@
 body {
-	background-color: #fdff9e;
-	font-family: "dico-mono", mono;
-	font-weight: 400;
+	background-color: #DDF8F3;
+	font-family: Helvetica,Arial,sans-serif;
 	font-style: normal;
 	line-height: 160%;
+	color: #333;
+	margin: 0 auto;
+	padding: 0 1em;
 }
 
-.main {
-	max-width: calc(var(--main-width) + var(--gap) * 30);
+.main, 
+footer {
+	 max-width: 1300px;
+	 margin: 0 auto;
 }
 
 h1,
@@ -16,10 +20,21 @@ h3 {
 	font-family: "dico-mono", mono;
 	font-weight: 400;
 	font-style: normal;
+	line-height: 140%;
+	color: #F118B4;
+}
+
+h1 span {
+	font-family: "dico-mono-script", mono;
+}
+
+main p {
+	width: 75%;
 }
 
 table {
-	margin-top: 3em;
+	margin: 3em 0;
+	font-family: "dico-mono", mono;
 }
 
 th, td {
@@ -27,12 +42,15 @@ th, td {
 	border-top: 0.5px dashed black;
 	padding: 0.6em 0.2em;
 	font-size: 1.4em;
+	margin-right: 1em;
 }
 
 th {
+	font-family: Helvetica,Arial,sans-serif;
 	text-align: left;
 	font-size: 1em;
 	text-transform: uppercase;
+	letter-spacing: 0.1em;
 }
 
 th.article {
@@ -44,17 +62,18 @@ th.author {
 }
 
 td.title {
-	font-weight: 400;
-	line-height: 160%
+	padding-right: 0.6em;
 }
 
-td.author {
-/*	font-style: italic;
+p a {
+	color: #333;
+	text-decoration: underline;
 }
 
-td.date {
-/*	font-weight: 100;*/
-/*	color: #999;*/
+td a {
+/*	color: #F118B4;*/
+	color: #333;
+	text-decoration: none;
 }
 
 a:hover {
@@ -62,16 +81,30 @@ a:hover {
 }
 
 footer {
-	background-color: #333;
-	margin-top: 6em;
-	padding: 3em 0;
-	color: #fff;
-	text-align: center;
+	padding-bottom: 3em;
 	font-size: 0.8em;
+	text-align: right;
+}
+
+footer img {
+	-webkit-transform: scaleX(-1);
+  	transform: scaleX(-1);
 }
 
 /* mobile view --------------------- */
 @media (max-width: 415px) {
+	body {
+		padding: 0 0.7em;
+	}
+
+	.main h1 {
+		text-align: center;
+	}
+
+	.main p {
+		width: 100%;
+	}
+
 	th {
     	display: none;
     }
@@ -79,20 +112,21 @@ footer {
     td {
         display: block;
         clear: all;
-        width: 100% !important;
 		padding: 0;
+		margin: 0;
         border-top: none;
-        line-height: 160%;
+        line-height: 140%;
     }
 
     td.title {
     	border-top: 0.5px dashed black;
-    	margin: 1em 0 0.3em;
-    	padding-top: 0.8em;
+    	margin: 0.8em 0 0.1em;
+    	padding-top: 0.6em;
     }
 
 	td.author,
 	td.date {
 		font-size: 1em;
+		padding-top: 0.3em;
 	}    
 }
