--- a/sites/projects.kwon.nyc/layouts/partials/head.html
+++ b/sites/projects.kwon.nyc/layouts/partials/head.html
@@ -1,4 +1,5 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8">
 <link rel="stylesheet" type="text/css" href="/css/internet-is-fun.css">
 <link rel="stylesheet" href="https://use.typekit.net/gql5ntq.css">
 <title>{{ .Title }}</title>
