--- a/sites/projects.kwon.nyc/layouts/partials/head.html
+++ b/sites/projects.kwon.nyc/layouts/partials/head.html
@@ -2,4 +2,5 @@
 <meta charset="UTF-8">
 <link rel="stylesheet" type="text/css" href="/css/internet-is-fun.css">
 <link rel="stylesheet" href="https://use.typekit.net/gql5ntq.css">
+<script defer data-domain="projects.kwon.nyc" src="https://plausible.io/js/script.js"></script>
 <title>{{ .Title }}</title>
